k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ashwani-deployment
  labels:
    app: hello-ashwani
spec:
  replicas: 4 # High availability: runs two copies of your app
  selector:
    matchLabels:
      app: hello-ashwani
  template:
    metadata:
      labels:
        app: hello-ashwani
        sidecar.istio.io/inject: "true" # This line tells Istio to add the mTLS "Security Guard"
    spec:
      containers:
      - name: hello-ashwani-python
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-ashwani-service
spec:
  selector:
    app: hello-ashwani
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
