k8s-manifests/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-ashwani-gateway
spec:
  selector:
    istio: ingressgateway # Uses the default Azure Istio ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # This means it will accept traffic from any URL for now
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-ashwani-vs
spec:
  hosts:
  - "*"
  gateways:
  - hello-ashwani-gateway
  http:
  - route:
    - destination:
        host: hello-ashwani-service # This MUST match the Service name in your deployment.yaml
        port:
          number: 80
